EPBDS-13250 Replace commons-jxpath with own implementation for traversing OpenAPI references (#736)